# memo-rvm

./: README.md  pyproject.toml
src/memo_rvm/: assembler.py  vm.py
tests/: test1.rasm  test2.rasm  test_memo_rvm.py
